<resources>
    <string name="app_name">AndroidHandsOn</string>
    <string name="name">Name</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="btn_login">Login</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>