<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_default"
    tools:context=".Login">

    <TextView
        style="@style/Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_default"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_default"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        style="@style/AppButton"
        android:layout_marginTop="@dimen/margin_top_default"
        android:text="@string/btn_login"
         />

</LinearLayout>